[project]
name = "monster-friend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatterbox-tts>=0.1.2",
    "nltk>=3.9.1",
    "openai[agents,agents-ollama]>=1.14.0,<2.0.0",
    "openai-agents>=0.2.3",
    "openai-whisper>=20250625",
    "pyaudio>=0.2.14",
    "pypdf>=5.9.0",
    "rich>=14.0.0",
    "sounddevice>=0.5.2",
    "speechrecognition>=3.14.3",
    "suno-bark>=0.1.5",
    "ollama>=0.5.1",
]
